# tradepulse

./: app.py  demo.ipynb  pyproject.toml  requirements.txt
Config/: __init__.py  config.py  fetchindex.py  indexjson.py  logger.py  metadata.py
Config/STATIC/: dhan_secrets.ini  nifty_index_links.csv  nifty_indices_json.json  stock_metadata.json
Data/: __init__.py  fetchdata.py  update_gap_analysis.py
Data/REALTIME/: today_opening_prices.json
Execution/: dhan_execution_engine.py
Risk/: garch.py
Strategies/: backtest_engine.py  dow_theory.py  dow_theory_live.py
Utilities/: utilities.py
pages/: 01_🔍_Stock_Scanner.py  08_⚡_Real_Time_PnL.py  16_💸_Paper_Trading.py
utils/: calculations.py  data_fetcher.py  risk_metrics.py  technical_indicators.py  visualizations.py
